1.002001 - 2011-02-25
  - switch .svn to .git in smells-of-vcs test and create it ourselves
    to ease importing of this dist into subversion repositories
1.002000 - 2011-02-16
  - add multidimensional and bareword::filehandles in author mode
1.1.1 Dec 05 2010
  - disable uninitialized warnings before calling ->SUPER::VERSION
1.1.0 Nov 22 2010
  - enable extra testing only if .git or .svn present to keep requirement
    for extra modules author-side
1.0.0 Jul 18 2010
  - initial release