@@ -1,4 +1,7 @@
-mkdir('t/smells-of-vcs/.git') or die "Couldn't create fake .git: $!";
+# -e is sufficient here.
+-e 't/smells-of-vcs/.git'
+  or mkdir('t/smells-of-vcs/.git')
+  or die "Couldn't create fake .git: $!";
 
 use Test::More qw(no_plan);
 
