@@ -1,3 +1,5 @@
+  - only try and mkdir the .git if it doesn't already exist so repeated
+    test runs don't explode
 1.002001 - 2011-02-25
   - switch .svn to .git in smells-of-vcs test and create it ourselves
     to ease importing of this dist into subversion repositories
